删除一些链接的nofollow标签

--- a/index_zh.html
+++ b/index_zh.html
@@ -160,73 +160,73 @@
         <div class="content_section_text">
           <div id="a" style="display:none">  <!--通过局域网或者ZeroTier访问-->
             <p>
-              <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
-              <a href="//host:23333" rel="nofollow" class="custom-link">MCSManager面板</a>
-              <a href="./qbt/" rel="nofollow" class="custom-link">qBittorrent网页UI</a>
-              <a href="//host:5244" rel="nofollow" class="custom-link">网盘</a>
-              <a href="//host:8084" rel="nofollow" class="custom-link">路由器Web管理</a>
-              <a href="//host:8085" rel="nofollow" class="custom-link">华硕下载大师</a>
-              <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
-              <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
-              <a href="./iis/" rel="nofollow">Windows服务器</a>
-              <a href="./certsrv/" rel="nofollow">PC2412证书服务</a>
+              <a href="./tools/URL_redirect.html">URL重定向</a>
+              <a href="//host:23333" class="custom-link">MCSManager面板</a>
+              <a href="./qbt/" class="custom-link">qBittorrent网页UI</a>
+              <a href="//host:5244" class="custom-link">网盘</a>
+              <a href="//host:8084" class="custom-link">路由器Web管理</a>
+              <a href="//host:8085" class="custom-link">华硕下载大师</a>
+              <a href="./uptimeStatusRevise">服务器状态监控</a>
+              <a href="./Gaokao_Countdown.html">高考倒计时</a>
+              <a href="./iis/">Windows服务器</a>
+              <a href="./certsrv/">PC2412证书服务</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
-              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
-              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
-              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
+              <a href="https://www.guguan.hz.cz/">由FRP代理的页面</a>
+              <a href="http://guguan.000.pe/" class="change-protocol">博客</a>
+              <a href="http://guguan123.github.io/" class="change-protocol">由Github托管的页面</a>
+              <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="b" style="display:none">  <!--通过内网穿透访问-->
             <p>
-              <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
-              <a href="https://mcsm.guguan.hz.cz/" rel="nofollow">MCSManager面板</a>
-              <a href="./qbt/" rel="nofollow">qBittorrent网页UI</a>
-              <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
-              <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
-              <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
-              <a href="./iis/" rel="nofollow">Windows服务器</a>
-              <a href="./certsrv/" rel="nofollow">PC2412证书服务</a>
+              <a href="./tools/URL_redirect.html">URL重定向</a>
+              <a href="https://mcsm.guguan.hz.cz/">MCSManager面板</a>
+              <a href="./qbt/">qBittorrent网页UI</a>
+              <a href="http://frp-fly.top:58371/">华硕下载大师</a>
+              <a href="./uptimeStatusRevise">服务器状态监控</a>
+              <a href="./Gaokao_Countdown.html">高考倒计时</a>
+              <a href="./iis/">Windows服务器</a>
+              <a href="./certsrv/">PC2412证书服务</a>
             </p>
             <p>
-              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
-              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
-              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
+              <a href="http://guguan.000.pe/" class="change-protocol">博客</a>
+              <a href="http://guguan123.github.io/" class="change-protocol">由Github托管的页面</a>
+              <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="c" style="display:none">  <!--访问的是云服务器（废弃）-->
             <p>
-              <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
-              <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
-              <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
+              <a href="./tools/URL_redirect.html">URL重定向</a>
+              <a href="http://frp-fly.top:58371/">华硕下载大师</a>
+              <a href="./uptimeStatusRevise">服务器状态监控</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
-              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
-              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
-              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
+              <a href="https://www.guguan.hz.cz/">由FRP代理的页面</a>
+              <a href="http://guguan.000.pe/" class="change-protocol">博客</a>
+              <a href="http://guguan123.github.io/" class="change-protocol">由Github托管的页面</a>
+              <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="d">  <!--访问的是GitHub Pages-->
             <p>
-              <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
-              <a href="./tools/tracker.txt" rel="nofollow">Tracker服务器列表</a>
-              <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
-              <a href="./uptimeStatusRevise/" rel="nofollow">服务器状态监控</a>
+              <a href="./tools/URL_redirect.html">URL重定向</a>
+              <a href="./tools/tracker.txt">Tracker服务器列表</a>
+              <a href="./Gaokao_Countdown.html">高考倒计时</a>
+              <a href="./uptimeStatusRevise/">服务器状态监控</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
-              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
-              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
+              <a href="https://www.guguan.hz.cz/">由FRP代理的页面</a>
+              <a href="http://guguan.000.pe/" class="change-protocol">博客</a>
+              <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <a href="http://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
