--- a/index.html
+++ b/index.html
@@ -184,69 +184,69 @@
         <div class="content_section_text">
           <div id="a" style="display:none">
             <p>
-              <a href="./tools/URL_redirect.html" rel="nofollow">URL redirect</a>
-              <a href="//host:23333" rel="nofollow" class="custom-link">MCSManager Panel</a>
-              <a href="./qbt/" rel="nofollow" class="custom-link">qBittorrent Web UI</a>
-              <a href="//host:5244" rel="nofollow" class="custom-link">Alist</a>
-              <a href="//host:8084" rel="nofollow" class="custom-link">Router Web</a>
-              <a href="//host:8085" rel="nofollow" class="custom-link">ASUS Download Master</a>
-              <a href="./iis/" rel="nofollow">Windows Server</a>
+              <a href="./tools/URL_redirect.html">URL redirect</a>
+              <a href="//host:23333" class="custom-link">MCSManager Panel</a>
+              <a href="./qbt/" class="custom-link">qBittorrent Web UI</a>
+              <a href="//host:5244" class="custom-link">Alist</a>
+              <a href="//host:8084" class="custom-link">Router Web</a>
+              <a href="//host:8085" class="custom-link">ASUS Download Master</a>
+              <a href="./iis/">Windows Server</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
-              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
-              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
-              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
+              <a href="https://www.guguan.hz.cz/">Websites proxy by FRP</a>
+              <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io/" class="change-protocol">Pages hosted by Github</a>
+              <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
+              <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
+              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="b" style="display:none">
             <p>
-              <a href="./tools/URL_redirect.html" rel="nofollow">URL redirect</a>
-              <a href="http://kr-se-cncn-1.openfrp.top:20000/" rel="nofollow">MCSManager Panel</a>
-              <a href="./qbt/" rel="nofollow">qBittorrent Web UI</a>
-              <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">Alist</a>
-              <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
-              <a href="./iis/" rel="nofollow">Windows Server</a>
+              <a href="./tools/URL_redirect.html">URL redirect</a>
+              <a href="http://kr-se-cncn-1.openfrp.top:20000/">MCSManager Panel</a>
+              <a href="./qbt/">qBittorrent Web UI</a>
+              <a href="http://kr-nc-bgp-1.openfrp.top:52440/">Alist</a>
+              <a href="http://frp-fly.top:58371/">ASUS Download Master</a>
+              <a href="./iis/">Windows Server</a>
             </p>
             <p>
-              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
-              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
-              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
+              <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io/" class="change-protocol">Pages hosted by Github</a>
+              <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
+              <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
+              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="c" style="display:none">
             <p>
-              <a href="./tools/URL_redirect.html" rel="nofollow">URL redirect</a>
-              <a href="http://kr-se-cncn-1.openfrp.top:20000/" rel="nofollow">MCSManager Panel</a>
-              <a href="https://www.guguan.hz.cz/qbt/" rel="nofollow">qBittorrent Web UI</a>
-              <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">Alist</a>
-              <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
+              <a href="./tools/URL_redirect.html">URL redirect</a>
+              <a href="http://kr-se-cncn-1.openfrp.top:20000/">MCSManager Panel</a>
+              <a href="https://www.guguan.hz.cz/qbt/">qBittorrent Web UI</a>
+              <a href="http://kr-nc-bgp-1.openfrp.top:52440/">Alist</a>
+              <a href="http://frp-fly.top:58371/">ASUS Download Master</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
-              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
-              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
-              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
+              <a href="https://www.guguan.hz.cz/">Websites proxy by FRP</a>
+              <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io/" class="change-protocol">Pages hosted by Github</a>
+              <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
+              <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
+              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="d">
             <p>
-              <a href="./tools/URL_redirect.html" rel="nofollow">URL redirect</a>
-              <a href="./tools/tracker.txt" rel="nofollow">Tracker server list</a>
-              <a href="./Gaokao_Countdown.html" rel="nofollow">College Entrance Exam Countdown</a>
+              <a href="./tools/URL_redirect.html">URL redirect</a>
+              <a href="./tools/tracker.txt">Tracker server list</a>
+              <a href="./Gaokao_Countdown.html">College Entrance Exam Countdown</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
-              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
-              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
+              <a href="https://www.guguan.hz.cz/">Websites proxy by FRP</a>
+              <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
+              <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
+              <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
+              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <a href="http://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
