将数据统计链接改成https

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
-          <a href="http://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
+          <a href="http://wapmz.com/in/51" class="wapmz change-protocol"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
         </div>
       </div>
     </div>
