--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <a href="./iis/">Windows Server</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/">Websites proxy by FRP</a>
+              <a href="https://guguan30.top/">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io/" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
@@ -222,12 +222,11 @@
             <p>
               <a href="./tools/URL_redirect.html">URL redirect</a>
               <a href="http://kr-se-cncn-1.openfrp.top:20000/">MCSManager Panel</a>
-              <a href="https://www.guguan.hz.cz/qbt/">qBittorrent Web UI</a>
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/">Alist</a>
               <a href="http://frp-fly.top:58371/">ASUS Download Master</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/">Websites proxy by FRP</a>
+              <a href="https://guguan30.top/">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io/" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
@@ -242,7 +241,7 @@
               <a href="./Gaokao_Countdown.html">College Entrance Exam Countdown</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/">Websites proxy by FRP</a>
+              <a href="https://guguan30.top/">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
               <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
