--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             Others
         </div>
         <div class="content_section_text">
-          <div id="a" style="display:none">
+          <div id="other_content_section_text_a" style="display:none">
             <p>
               <a href="./tools/URL_redirect.html">URL redirect</a>
               <a href="//host:23333" class="custom-link">MCSManager Panel</a>
@@ -201,7 +201,7 @@
               <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
-          <div id="b" style="display:none">
+          <div id="other_content_section_text_b" style="display:none">
             <p>
               <a href="./tools/URL_redirect.html">URL redirect</a>
               <a href="http://kr-se-cncn-1.openfrp.top:20000/">MCSManager Panel</a>
@@ -218,7 +218,7 @@
               <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
-          <div id="c" style="display:none">
+          <div id="other_content_section_text_c" style="display:none">
             <p>
               <a href="./tools/URL_redirect.html">URL redirect</a>
               <a href="http://kr-se-cncn-1.openfrp.top:20000/">MCSManager Panel</a>
@@ -234,25 +234,12 @@
               <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
-          <div id="d">
-            <p>
-              <a href="./tools/URL_redirect.html">URL redirect</a>
-              <a href="./tools/tracker.txt">Tracker server list</a>
-              <a href="./Gaokao_Countdown.html">College Entrance Exam Countdown</a>
-            </p>
-            <p>
-              <a href="https://guguan30.top/">Websites proxy by FRP</a>
-              <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
-              <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
-              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
-            </p>
-          </div>
           <a href="http://wapmz.com/in/51" class="wapmz change-protocol"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
         </div>
       </div>
     </div>
     <div class="validator">
     </div>
+    <script type="text/javascript" src="./js/pageVisibilityManage.js"></script>
   </body>
 </html>
