--- a/index_zh.html
+++ b/index_zh.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
     <title>Apache2 Ubuntu默认页面：它可以工作</title>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="./js/loadLanguage.js"></script>
     <!--<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.7.0.js"></script>-->
     <!--从Microsoft CDN获取jQuery-->
     <link rel="stylesheet" href="style.css"/>
@@ -158,7 +158,7 @@
             其他
         </div>
         <div class="content_section_text">
-          <div id="a" style="display:none">  <!--通过局域网或者ZeroTier访问-->
+          <div id="other_content_section_text_a" style="display:none">  <!--通过局域网或者ZeroTier访问-->
             <p>
               <a href="./tools/URL_redirect.html">URL重定向</a>
               <a href="//host:23333" class="custom-link">MCSManager面板</a>
@@ -180,7 +180,7 @@
               <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
-          <div id="b" style="display:none">  <!--通过内网穿透访问-->
+          <div id="other_content_section_text_b" style="display:none">  <!--通过内网穿透访问-->
             <p>
               <a href="./tools/URL_redirect.html">URL重定向</a>
               <a href="https://mcsm.guguan.hz.cz/">MCSManager面板</a>
@@ -199,22 +199,7 @@
               <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
-          <div id="c" style="display:none">  <!--访问的是云服务器（废弃）-->
-            <p>
-              <a href="./tools/URL_redirect.html">URL重定向</a>
-              <a href="http://frp-fly.top:58371/">华硕下载大师</a>
-              <a href="./uptimeStatusRevise">服务器状态监控</a>
-            </p>
-            <p>
-              <a href="https://www.guguan.hz.cz/">由FRP代理的页面</a>
-              <a href="http://guguan.000.pe/" class="change-protocol">博客</a>
-              <a href="http://guguan123.github.io/" class="change-protocol">由Github托管的页面</a>
-              <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/">永硕E盘</a>
-              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
-            </p>
-          </div>
-          <div id="d">  <!--访问的是GitHub Pages-->
+          <div id="other_content_section_text_c">  <!--访问的是GitHub Pages-->
             <p>
               <a href="./tools/URL_redirect.html">URL重定向</a>
               <a href="./tools/tracker.txt">Tracker服务器列表</a>
@@ -235,5 +220,6 @@
     </div>
     <div class="validator">
     </div>
+    <script type="text/javascript" src="./js/pageVisibilityManage.js"></script>
   </body>
 </html>
