修复了“忘记加载JS脚本”的问题

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
     <title>Apache2 Ubuntu Default Page: It works</title>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="./js/loadLanguage.js"></script>
     <!--从Microsoft CDN获取jQuery-->
     <!--<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.7.0.js"></script>-->
     <link rel="stylesheet" href="style.css"/>
