更新超链接

--- a/index_zh.html
+++ b/index_zh.html
@@ -172,18 +172,17 @@
               <a href="./certsrv/">PC2412证书服务</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/">由FRP代理的页面</a>
-              <a href="http://guguan.000.pe/" class="change-protocol">博客</a>
-              <a href="http://guguan123.github.io/" class="change-protocol">由Github托管的页面</a>
+              <a href="https://guguan30.top">由FRP代理的页面</a>
+              <a href="http://guguan.000.pe" class="change-protocol">博客</a>
+              <a href="http://guguan123.github.io" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/">永硕E盘</a>
-              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
+              <a href="http://guguan123.ysepan.com">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="other_content_section_text_b" style="display:none">  <!--通过内网穿透访问-->
             <p>
               <a href="./tools/URL_redirect.html">URL重定向</a>
-              <a href="https://mcsm.guguan.hz.cz/">MCSManager面板</a>
               <a href="./qbt/">qBittorrent网页UI</a>
               <a href="http://frp-fly.top:58371/">华硕下载大师</a>
               <a href="./uptimeStatusRevise">服务器状态监控</a>
@@ -192,11 +191,11 @@
               <a href="./certsrv/">PC2412证书服务</a>
             </p>
             <p>
-              <a href="http://guguan.000.pe/" class="change-protocol">博客</a>
-              <a href="http://guguan123.github.io/" class="change-protocol">由Github托管的页面</a>
+              <a href="http://guguan.000.pe" class="change-protocol">博客</a>
+              <a href="http://guguan123.github.io" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/">永硕E盘</a>
-              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
+              <a href="http://guguan123.ysepan.com">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="other_content_section_text_c">  <!--访问的是GitHub Pages-->
@@ -204,14 +203,14 @@
               <a href="./tools/URL_redirect.html">URL重定向</a>
               <a href="./tools/tracker.txt">Tracker服务器列表</a>
               <a href="./Gaokao_Countdown.html">高考倒计时</a>
-              <a href="./uptimeStatusRevise/">服务器状态监控</a>
+              <a href="./uptimeStatusRevise">服务器状态监控</a>
             </p>
             <p>
-              <a href="https://www.guguan.hz.cz/">由FRP代理的页面</a>
-              <a href="http://guguan.000.pe/" class="change-protocol">博客</a>
+              <a href="https://guguan30.top">由FRP代理的页面</a>
+              <a href="http://guguan.000.pe" class="change-protocol">博客</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/">永硕E盘</a>
-              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
+              <a href="http://guguan123.ysepan.com">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <a href="http://wapmz.com/in/51" class="wapmz change-protocol"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
