--- a/index.html
+++ b/index.html
@@ -193,45 +193,43 @@
               <a href="./iis/">Windows Server</a>
             </p>
             <p>
-              <a href="https://guguan30.top/">Websites proxy by FRP</a>
-              <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
-              <a href="http://guguan123.github.io/" class="change-protocol">Pages hosted by Github</a>
+              <a href="https://guguan30.top">Websites proxy by FRP</a>
+              <a href="http://guguan.000.pe" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
-              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
+              <a href="http://guguan123.ysepan.com">YongShuo network disk</a>
+              <a href="http://tracker.guguan.000.pe" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="other_content_section_text_b" style="display:none">
             <p>
               <a href="./tools/URL_redirect.html">URL redirect</a>
-              <a href="http://kr-se-cncn-1.openfrp.top:20000/">MCSManager Panel</a>
               <a href="./qbt/">qBittorrent Web UI</a>
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/">Alist</a>
               <a href="http://frp-fly.top:58371/">ASUS Download Master</a>
               <a href="./iis/">Windows Server</a>
             </p>
             <p>
-              <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
-              <a href="http://guguan123.github.io/" class="change-protocol">Pages hosted by Github</a>
+              <a href="http://guguan.000.pe" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
-              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
+              <a href="http://guguan123.ysepan.com">YongShuo network disk</a>
+              <a href="http://tracker.guguan.000.pe" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="other_content_section_text_c" style="display:none">
             <p>
               <a href="./tools/URL_redirect.html">URL redirect</a>
-              <a href="http://kr-se-cncn-1.openfrp.top:20000/">MCSManager Panel</a>
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/">Alist</a>
               <a href="http://frp-fly.top:58371/">ASUS Download Master</a>
             </p>
             <p>
-              <a href="https://guguan30.top/">Websites proxy by FRP</a>
-              <a href="http://guguan.000.pe/" class="change-protocol">Blog</a>
-              <a href="http://guguan123.github.io/" class="change-protocol">Pages hosted by Github</a>
+              <a href="https://guguan30.top">Websites proxy by FRP</a>
+              <a href="http://guguan.000.pe" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/">YongShuo network disk</a>
-              <a href="http://tracker.guguan.000.pe/" class="change-protocol">BitTorrent Tracker</a>
+              <a href="http://guguan123.ysepan.com">YongShuo network disk</a>
+              <a href="http://tracker.guguan.000.pe" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <a href="http://wapmz.com/in/51" class="wapmz change-protocol"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
