添加新的链接

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
           <div id="other_content_section_text_b" style="display:none">
             <p>
               <a href="./tools/URL_redirect.html">URL redirect</a>
+              <a href="/mcsm/">MCSManager Panel</a>
               <a href="./qbt/">qBittorrent Web UI</a>
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/">Alist</a>
               <a href="http://frp-fly.top:58371/">ASUS Download Master</a>
