--- a/index_zh.html
+++ b/index_zh.html
@@ -186,6 +186,7 @@
           <div id="other_content_section_text_b" style="display:none">  <!--通过内网穿透访问-->
             <p>
               <a href="./tools/URL_redirect.html">URL重定向</a>
+              <a href="/mcsm/">MCSManager面板</a>
               <a href="./qbt/">qBittorrent网页UI</a>
               <a href="http://frp-fly.top:58371/">华硕下载大师</a>
               <a href="./uptimeStatusRevise">服务器状态监控</a>
