更换博客链接

--- a/index_zh.html
+++ b/index_zh.html
@@ -176,7 +176,7 @@
             </p>
             <p>
               <a href="https://guguan30.top">由FRP代理的页面</a>
-              <a href="http://guguan.000.pe" class="change-protocol">博客</a>
+              <a href="http://guguan.viphost.vip" class="change-protocol">博客</a>
               <a href="http://guguan123.github.io" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com">永硕E盘</a>
@@ -195,7 +195,7 @@
               <a href="./certsrv/">PC2412证书服务</a>
             </p>
             <p>
-              <a href="http://guguan.000.pe" class="change-protocol">博客</a>
+              <a href="http://guguan.viphost.vip" class="change-protocol">博客</a>
               <a href="http://guguan123.github.io" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com">永硕E盘</a>
@@ -211,7 +211,7 @@
             </p>
             <p>
               <a href="https://guguan30.top">由FRP代理的页面</a>
-              <a href="http://guguan.000.pe" class="change-protocol">博客</a>
+              <a href="http://guguan.viphost.vip" class="change-protocol">博客</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com">永硕E盘</a>
               <a href="http://tracker.guguan.000.pe" class="change-protocol">BitTorrent Tracker</a>
