--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </p>
             <p>
               <a href="https://guguan30.top">Websites proxy by FRP</a>
-              <a href="http://guguan.000.pe" class="change-protocol">Blog</a>
+              <a href="http://guguan.viphost.vip" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
               <a href="http://guguan123.ysepan.com">YongShuo network disk</a>
@@ -214,7 +214,7 @@
               <a href="./iis/">Windows Server</a>
             </p>
             <p>
-              <a href="http://guguan.000.pe" class="change-protocol">Blog</a>
+              <a href="http://guguan.viphost.vip" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
               <a href="http://guguan123.ysepan.com">YongShuo network disk</a>
@@ -229,7 +229,7 @@
             </p>
             <p>
               <a href="https://guguan30.top">Websites proxy by FRP</a>
-              <a href="http://guguan.000.pe" class="change-protocol">Blog</a>
+              <a href="http://guguan.viphost.vip/" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" class="change-protocol">Third party HomePage</a>
               <a href="http://guguan123.ysepan.com">YongShuo network disk</a>
