--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
 	</header>
 	<main>
 		<p>Welcome to my website!</p>
-		<p>Visit my <a href="https://github.com/guguan123" title="Visit my Github Pages">Github Pages</a>.</p>
-		<p>Explore my <a href="https://blog.guguan.us.kg" title="Visit my Blog">Blog</a>.</p>
-		<p>Check out my <a href="https://tracker.guguan.us.kg" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
-		<p>Discover <a href="https://dcms.myredirect.us" title="Visit DCMS Dev">DCMS Dev</a>.</p>
+		<p>Visit my <a href="//github.com/guguan123" title="Visit my Github Pages">Github Pages</a>.</p>
+		<p>Explore my <a href="//blog.guguan.us.kg" title="Visit my Blog">Blog</a>.</p>
+		<p>Discover <a href="//dcms.myredirect.us" title="Visit DCMS Dev">DCMS Dev</a>.</p>
 	</main>
 	<footer>
 		<p>© 2024 GuGuan123. All rights reserved.</p>
