添加流量统计

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	</main>
 	<footer>
 		<p>© 2024 GuGuan123. All rights reserved.</p>
+		<a href="//wapmz.com/in/50"><img src="//wapmz.com/cn/big/50" alt="wapmz.com"></a>
 	</footer>
 </body>
 </html>
