改进暗色模式

--- a/index.html
+++ b/index.html
@@ -17,23 +17,41 @@
 			body {
 				background-color: black; /* 黑色背景 */
 				color: rgba(255, 255, 255, 0.87); /* 设置文字透明度 */
-				font-family: Arial, sans-serif;
-				line-height: 1.6;
 			}
-			a {
-				color: #82c7ff; /* 正常链接颜色 */
-				text-decoration: none; /* 默认去掉下划线 */
-			}
-			a:hover {
-				color: #c0e7ff; /* 悬停时更亮的颜色 */
-				text-decoration: underline; /* 添加下划线 */
-			}
-			a:active {
-				color: #1976D2; /* 点击时的颜色 */
-				text-decoration: none;
+
+			/* 链接 */
+			a:link {
+				color: #4A90E2; /* 未访问链接 */
+				text-decoration: none; /* 去除默认下划线 */
 			}
 			a:visited {
-				color: #b3b8ff; /* 已访问链接颜色 */
+				color: #7A6FBF; /* 已访问链接 */
+			}
+			a:hover {
+				color: #66B3FF; /* 悬停时 */
+				text-decoration: underline; /* 悬停时添加下划线 */
+			}
+			a:active {
+				color: #357ABD; /* 激活时 */
+			}
+
+			/* 输入框 */
+			input[type="text"] {
+				width: 100%;
+				padding: 10px;
+				background-color: #333333;
+				border: 1px solid #555555;
+				color: #E0E0E0;
+				border-radius: 4px;
+				outline: none;
+				font-size: 16px;
+			}
+			input[type="text"]::placeholder {
+				color: #A0A0A0;
+			}
+			input[type="text"]:focus {
+				border-color: #4A90E2;
+				box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
 			}
 		}
 	</style>
