在页脚中添加了萌ICP备20252412号链接

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<footer>
 		<p>© 2024 GuGuan123. All rights reserved.</p>
 		<a href="//wapmz.com/in/50"><img src="//wapmz.com/cn/big/50" alt="wapmz.com"></a>
+		<a href="//icp.gov.moe/?keyword=20252412" target="_blank">萌ICP备20252412号</a>
 	</footer>
 </body>
 </html>
