--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Welcome to GuGuan123's personal website, featuring links to Github, blog, tracker, and more.">
 	<meta property="og:title" content="GuGuan123's Website">
 	<meta property="og:description" content="Visit my personal site to explore my projects and blog.">
-	<meta property="og:url" content="https://www.guguan.us.kg">
+	<meta property="og:url" content="https://www.guguan.dpdns.org">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="https://s1.imagehub.cc/images/2025/02/08/92c7c4a4be2d7588121c3f23d2f79bcb.png">
 	<title>GuGuan123's Website</title>
@@ -63,9 +63,9 @@
 	<main>
 		<p>Welcome to my website!</p>
 		<p>Visit my <a href="//github.com/guguan123" title="Visit my Github Pages">Github Pages</a>.</p>
-		<p>Explore my <a href="//blog.guguan.us.kg" title="Visit my Blog">Blog</a>.</p>
+		<p>Explore my <a href="//blog.guguan.dpdns.org" title="Visit my Blog">Blog</a>.</p>
 		<p>Discover <a href="//dcms.myredirect.us" title="Visit DCMS Dev">DCMS Dev</a>.</p>
-		<p>Check out my <a href="//tracker.guguan.us.kg" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
+		<p>Check out my <a href="//tracker.guguan.dpdns.org" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
 	</main>
 	<footer>
 		<p>© 2024 GuGuan123. All rights reserved.</p>
