添加Clarity跟踪代码以增强网站分析功能

--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
 			/* 链接 */
 			a:link {
 				color: #4A90E2; /* 未访问链接 */
-				text-decoration: none; /* 去除默认下划线 */
 			}
 			a:visited {
 				color: #7A6FBF; /* 已访问链接 */
 			}
 			a:hover {
 				color: #66B3FF; /* 悬停时 */
-				text-decoration: underline; /* 悬停时添加下划线 */
 			}
 			a:active {
 				color: #357ABD; /* 激活时 */
@@ -37,14 +35,9 @@
 
 			/* 输入框 */
 			input[type="text"] {
-				width: 100%;
-				padding: 10px;
 				background-color: #333333;
-				border: 1px solid #555555;
+				border-color: #555555;
 				color: #E0E0E0;
-				border-radius: 4px;
-				outline: none;
-				font-size: 16px;
 			}
 			input[type="text"]::placeholder {
 				color: #A0A0A0;
@@ -55,6 +48,14 @@
 			}
 		}
 	</style>
+	<!-- Clarity tracking code for https://guguan.dpdns.org/ -->
+	<script>
+		(function(c,l,a,r,i,t,y){
+			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+		})(window, document, "clarity", "script", "qwm2cpd5ks");
+	</script>
 </head>
 <body>
 	<header>
