new file:   about.html

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 		<p>Check out my <a href="//tracker.guguan.dpdns.org" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
 	</main>
 	<footer>
-		<p>© 2024 GuGuan123. All rights reserved.</p>
-		<a href="//wapmz.com/in/50"><img src="//wapmz.com/cn/big/50" alt="wapmz.com"></a>
+		<p>© 2024 <a href="about.html" title="About Me">GuGuan123</a>. All rights reserved.</p>
+		<a href="//wapmz.com/in/50" target="_blank"><img src="//wapmz.com/cn/big/50" alt="wapmz.com"></a>
 		<a href="//icp.gov.moe/?keyword=20252412" target="_blank">萌ICP备20252412号</a>
 	</footer>
 </body>
