modified:   about.html

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 	<main>
 		<section>
 			<h2>Who Am I?</h2>
-			<p>Hi, I'm GuGuan123! I'm a tech enthusiast who loves coding, blogging, and exploring the digital world. This page is a little about me and a hub for my online projects and interests.</p>
+			<p>Hi, I'm GuGuan123! I'm a tech enthusiast who loves coding, blogging, and exploring the digital world.</p>
 		</section>
 		<section>
 			<h4>more</h4>
